<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/InstantBook_Main_Title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/InstantBook_Main_Info" />

    <Button
        android:id="@+id/btn_InstantBookMain_Bed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/All_Bed" />

    <Button
        android:id="@+id/btn_InstantBookMain_Eat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/All_Eat" />

    <Button
        android:id="@+id/btn_InstantBookMain_See"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/All_See" />

    <Button
        android:id="@+id/btn_InstantBookMain_Play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/All_Play" />

    <Button
        android:id="@+id/btn_InstantBookMain_Car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/All_Car" />

</LinearLayout>