<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Setting_VersionInfo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/Setting_Version_Now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Setting_NowVersion" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/All_None" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/Setting_Version_Next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Setting_NextVersion" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/All_None" />
        <Button 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           	android:text="@string/Setting_Update"
            />
    </LinearLayout>

</LinearLayout>