<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/iv_MakeTravelPlanLevel3_InfoImage"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/All_ShopName" />

        <TextView
            android:id="@+id/tv_MakeTravelPlanLevel3_ShopName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/All_None" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/All_ShopSelect" />

        <TextView
            android:id="@+id/tv_MakeTravelPlanLevel3_ShopSelect"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/All_None" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/All_ShopAddress" />

        <TextView
            android:id="@+id/tv_MakeTravelPlanLevel3_ShopAddress"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/All_None" />

        <Button
            android:id="@+id/btn_MakeTravelPlanLevel3_SeeMap"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/All_ShopSeeMap" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/All_ShopURL" />

        <TextView
            android:id="@+id/tv_MakeTravelPlanLevel3_ShopURL"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/All_None" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/All_ShopPhone" />

        <TextView
            android:id="@+id/tv_MakeTravelPlanLevel3_ShopPhone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/All_None" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/All_ShopInfo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="150dp" >

        <TextView
            android:id="@+id/tv_MakeTravelPlanLevel3_ShopInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/All_None" />
    </ScrollView>

    <Button
        android:id="@+id/btn_MakeTravelPlanLevel3_LoadAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/GoTravel_MakeTravelPlanLevel3_Add" />

</LinearLayout>