<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/GoTravel_ChooseGoPlanway_AreaName" />

        <TextView
            android:id="@+id/tv_ChooseGoPlanway_AreaName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/All_None" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/GoTravel_ChooseGoPlanway_Title" />

    <ListView
        android:id="@+id/lv_ChooseGoPlanway_AreaList"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >
    </ListView>

</LinearLayout>